.. comment:  -*- mode:rst; coding:utf-8 -*-

PATCHWORK RELEASE NOTES 
========================


10.0-0.922, 10.0-0.919 
----------------------

- Set the minimum system version to 10.3 when compiled on 10.5 and 10.6 otherwise.
- Backported to ccl-1.6 on MacOSX 10.5.8
- Implemented redirection to listener windows.
- Corrected switching between lisp and patchwork menubar.
- Corrected moving and resizing of patch boxes.
- Corrected selection of patches by click-and-drag of a grow rect arround them.
- Added instance drawing to replace srcXor trick.


.. comment:  THE END 